--- a/src/app/components/add-root-category/add-root-category.component.html
+++ b/src/app/components/add-root-category/add-root-category.component.html
@@ -3,7 +3,7 @@
 </div>
 
 <div class="set-12" *ngIf="isDataAvailable">
-  <h3>Nueva categoría</h3>
+  <h3>Nuevo tema</h3>
 
   <form class="set-12" [formGroup]="addCategoryFormGroup" (submit)="onAddCategory(addCategoryFormGroup)">
     <mat-form-field appearance="outline">
