--- a/src/app/components/public-document-mobile-fixed-tools/public-document-mobile-fixed-tools.component.html
+++ b/src/app/components/public-document-mobile-fixed-tools/public-document-mobile-fixed-tools.component.html
@@ -9,7 +9,7 @@
   </button>
   <button type="button" class="tool" [class.fixedpos]="open" (click)="popAddTopicDialog()" [disabled]="!isCollaborator">
     <mat-icon>note_add</mat-icon>
-    <!-- <small>Problemática</small> -->
+    <!-- <small>Problema</small> -->
   </button>
   <button type="button" class="tool" [class.fixedpos]="open" (click)="popInviteDialog()">
     <mat-icon>send</mat-icon>
