--- a/src/app/components/public-document-mobile-subcategory-bars/public-document-mobile-subcategory-bars.component.html
+++ b/src/app/components/public-document-mobile-subcategory-bars/public-document-mobile-subcategory-bars.component.html
@@ -29,5 +29,5 @@
 </div>
 
 <div class="set-12 empty-bars" *ngIf="layouts.length == 0">
-  No hay categorías disponibles.
+  No hay temas disponibles.
 </div>
