--- a/src/app/documents/single-theme/single-theme.component.html
+++ b/src/app/documents/single-theme/single-theme.component.html
@@ -192,7 +192,7 @@
                   <mat-icon>exit_to_app</mat-icon>
                   <small>Mover</small>
                 </button>
-                <button type="button" mat-menu-item>
+                <button type="button" mat-menu-item (click)="killSolution(element)">
                   <mat-icon>delete</mat-icon>
                   <small>Eliminar</small>
                 </button>
