--- a/src/app/hub/components/association-register/association-register.component.html
+++ b/src/app/hub/components/association-register/association-register.component.html
@@ -161,7 +161,7 @@
       </div>
       <div class="set-12 category">
         <p class="txt-center" *ngIf="!viewSubLayouts">
-          Selecciona las categorías de tu interés.
+          Selecciona los temas de tu interés.
         </p>
         <p class="txt-center"><mat-icon>touch_app</mat-icon></p>
       </div>
