--- a/src/app/hub/sign-up-mobile/sign-up-mobile.component.html
+++ b/src/app/hub/sign-up-mobile/sign-up-mobile.component.html
@@ -86,7 +86,7 @@
 
     <mat-step>
       <div class="set-12 txt-center dragcat">
-        <p>Arrastra y acomoda las categorías según tus intereses.</p>
+        <p>Arrastra y acomoda los temas según tus intereses.</p>
         <div class="set-12">
           <mat-icon>touch_app</mat-icon>
         </div>
