--- a/src/app/public-documents/category/category.component.html
+++ b/src/app/public-documents/category/category.component.html
@@ -51,6 +51,9 @@
           <button type="button" matTooltip="Comentar" matTooltipClass="tooltip" (click)="handleComments()">
             <mat-icon>forum</mat-icon>
           </button>
+          <button type="button" matTooltip="Testimonio" matTooltipClass="tooltip" (click)="popAddDocumentTestimony()">
+            <mat-icon>edit_note</mat-icon>
+          </button>
         </div>
       </mat-card>
 
