--- a/src/app/public-documents/components/category-bars/category-bars.component.html
+++ b/src/app/public-documents/components/category-bars/category-bars.component.html
@@ -14,7 +14,7 @@
     <!-- <button
       type="button"
       class="linker"
-      matTooltip="Abrir categoría"
+      matTooltip="Abrir tema"
       matTooltipClass="tooltip"
       matTooltipPosition="left"
       *ngIf="layoutSelected == layout._id && layoutSelected != ''"
