--- a/src/app/public-documents/components/panel-subcategory/panel-subcategory.component.html
+++ b/src/app/public-documents/components/panel-subcategory/panel-subcategory.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="categories.length === 0" class="main shadow">
   <p class="message">
-    <strong>No cuenta con temas</strong>
+    <strong>No cuenta con problemas</strong>
   </p>
 </div>
 
