--- a/src/app/public-documents/components/vertical-stats/vertical-stats.component.html
+++ b/src/app/public-documents/components/vertical-stats/vertical-stats.component.html
@@ -16,7 +16,7 @@
         <img src="../../../assets/images/danger.svg" alt="" width="42" />
       </div>
       <div class="texts-box">
-        <p class="name">Problemáticas</p>
+        <p class="name">Problema</p>
         <p class="amount">{{ 233 }}</p>
       </div>
     </div>
@@ -49,7 +49,7 @@
 
     <div class="set-9 texts-box">
       <p class="name">
-        <small>Problemáticas</small>
+        <small>Problemas</small>
       </p>
       <p class="amount">
         <small>{{ topics }}</small>
