--- a/src/app/public-documents/selected-category/selected-category.component.html
+++ b/src/app/public-documents/selected-category/selected-category.component.html
@@ -41,7 +41,7 @@
         </div>
         <div class="set-8">
           <div class="button">
-            <button type="button">Ver Subcategorías</button>
+            <button type="button">Ver Subtemas</button>
           </div>
         </div>
       </div>
