--- a/src/app/testimonials/testimonials.component.html
+++ b/src/app/testimonials/testimonials.component.html
@@ -61,7 +61,7 @@
           </button>
 
           <span *ngIf="element['relation'] != null">
-            <small *ngIf="element['relation'] == 'topic'" class="prob">Problemática</small>
+            <small *ngIf="element['relation'] == 'topic'" class="prob">Problema</small>
             <small *ngIf="element['relation'] == 'solution'" class="sol">Solución</small>
           </span>
         </td>
