--- a/src/app/college-marathon/add-topic-dialog/add-topic-dialog.component.html
+++ b/src/app/college-marathon/add-topic-dialog/add-topic-dialog.component.html
@@ -1,6 +1,6 @@
 <div class="set-12 dlghd">
   <div class="set-11">
-    <strong>Agrega tu Problemática</strong>
+    <strong>Agrega tu Problema</strong>
   </div>
   <div class="set-1 txt-right">
     <button type="button" mat-mini-fab color="primary" (click)="killDialog()" [disabled]="submitted">
