--- a/src/app/college-marathon/single-team/single-team.component.scss
+++ b/src/app/college-marathon/single-team/single-team.component.scss
@@ -1,5 +1,90 @@
 :host {
   width: 100vw;
   height: 100vh;
-  padding: 120px 40px 40px 40px;
+
+  .loading {
+    mat-spinner {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+  }
+
+  .teambanner {
+    position: relative;
+
+    .bannerhldr {
+      position: relative;
+
+      .imghldr {
+        height: 450px;
+        overflow: hidden;
+      }
+
+      img {
+        width: 100%;
+        height: auto;
+        float: left;
+      }
+
+      .avatar {
+        width: 170px;
+        height: 170px;
+        border-radius: 100%;
+        overflow: hidden;
+        background: #f1f1f1;
+        position: absolute;
+        bottom: -85px;
+        left: 85px;
+      }
+    }
+
+    .teamtools {
+      margin-top: 100px;
+      padding: 20px 0;
+      border-top: 1px solid rgba($color: #000000, $alpha: 0.1);
+    }
+
+    .collabs {
+      padding: 0 20px;
+
+      .set-6:nth-child(odd) {
+        padding-right: 10px;
+      }
+
+      .set-6:nth-child(even) {
+        padding-left: 10px;
+      }
+
+      .set-6 {
+        margin-bottom: 20px;
+      }
+
+      .usrcrd {
+        padding: 20px;
+        background: #f1f1f1;
+        border-radius: 5px;
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+
+        * {
+          margin: 0;
+        }
+
+        .usrimg {
+          width: 70px;
+          height: 70px;
+          border-radius: 100%;
+          overflow: hidden;
+          background: #ffffff;
+          margin-right: 20px;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+        }
+      }
+    }
+  }
 }
