--- a/src/app/components/add-document-collaborator/add-document-collaborator.component.html
+++ b/src/app/components/add-document-collaborator/add-document-collaborator.component.html
@@ -16,7 +16,7 @@
     <form [formGroup]="addCollaboratorFormGroup" (submit)="addCollaborator(addCollaboratorFormGroup)">
       <div class="set-12">
         <mat-form-field appearance="outline">
-          <mat-label>Buscar categoría</mat-label>
+          <mat-label>Buscar tema</mat-label>
           <mat-chip-list #chipList>
             <mat-chip *ngFor="let category of selectedCategories" (removed)="removeCategory(category)">
               {{category}}
