--- a/src/app/components/add-document-layout/add-document-layout.component.html
+++ b/src/app/components/add-document-layout/add-document-layout.component.html
@@ -31,7 +31,7 @@
         <div class="set-12 step-content">
           <div class="set-12">
             <mat-form-field appearance="outline">
-              <mat-label>Buscar categoría</mat-label>
+              <mat-label>Buscar tema</mat-label>
               <mat-chip-list #chipList>
                 <mat-chip *ngFor="let category of selectedCategories" (removed)="removeCategory(category)">
                   {{category}}
@@ -58,7 +58,7 @@
 
           <div class="set-12 ctrls">
             <button type="button" mat-raised-button color="accent" (click)="popAddRootCategoryDialog()">
-              <small>Nueva categoría</small>
+              <small>Nuevo Tema</small>
             </button>
             <button type="button" mat-raised-button color="primary" matStepperNext
               [disabled]="stepTwoFormGroup.invalid">
