--- a/src/app/components/add-document-theme/add-document-theme.component.html
+++ b/src/app/components/add-document-theme/add-document-theme.component.html
@@ -5,7 +5,7 @@
 <div class="set-12" *ngIf="isDataAvailable">
   <div class="set-12 dialog-head">
     <div class="set-9">
-      <h3>Agregar problemática</h3>
+      <h3>Agregar problema</h3>
     </div>
     <div class="set-3 txt-right">
       <button type="button" mat-mini-fab color="primary" (click)="killDialog()" [disabled]="submitted">
@@ -18,7 +18,7 @@
   <mat-stepper labelPosition="bottom" #stepper [disableRipple]="true" [linear]="true" [@.disabled]="true">
     <mat-step [stepControl]="addThemeFormGroup">
       <ng-template matStepLabel>
-        <small>Agrega problemática</small>
+        <small>Agregar problema</small>
       </ng-template>
 
       <div class="set-12 step-content">
