--- a/src/app/components/edit-category-data/edit-category-data.component.html
+++ b/src/app/components/edit-category-data/edit-category-data.component.html
@@ -19,9 +19,9 @@
     <form [formGroup]="formGroup" (submit)="editLayout(formGroup)">
       <div class="set-12 catname">
         <mat-form-field appearance="outline">
-          <mat-label>Categoría</mat-label>
+          <mat-label>Tema</mat-label>
           <input type="text" matInput formControlName="category">
-          <mat-hint>Editar el nombre de la categoría impactará en otros documentos</mat-hint>
+          <mat-hint>Editar el nombre del tema impactará en otros documentos</mat-hint>
         </mat-form-field>
       </div>
 
