--- a/src/app/components/give-edit-permission/give-edit-permission.component.html
+++ b/src/app/components/give-edit-permission/give-edit-permission.component.html
@@ -16,7 +16,7 @@
     <form [formGroup]="addCollaboratorFormGroup" (submit)="addCollaborator(addCollaboratorFormGroup)">
       <div class="set-12">
         <mat-form-field appearance="outline">
-          <mat-label>Seleccionar categoría(s)</mat-label>
+          <mat-label>Seleccionar tema(s)</mat-label>
           <mat-chip-list #chipList>
             <mat-chip *ngFor="let category of selectedCategories" (removed)="removeCategory(category)">
               {{category}}
