--- a/src/app/hub/components/c-type-template/c-type-template.component.html
+++ b/src/app/hub/components/c-type-template/c-type-template.component.html
@@ -75,12 +75,12 @@
                   <small>Abrir documento</small>
                 </button>
               </div>
-              <!-- <h4 class="category-title">Categorías</h4>
+              <!-- <h4 class="category-title">Temas</h4>
               <div class="set-12" *ngFor="let layout of document.layouts">
                 <ul>
                   <li>
                     <button type="button" (click)="linkMe('/documentos/' + document._id + '/categoria/' + layout._id)"
-                      matTooltip="Abrir categoría" matTooltipClass="tooltip" matTooltipPosition="right"
+                      matTooltip="Abrir tema" matTooltipClass="tooltip" matTooltipPosition="right"
                       [disabled]="!layout.access">
                       <span style="font-size: 14px">{{layout.category.name}}</span>
                     </button>
