--- a/src/app/hub/components/editor-template/editor-template.component.html
+++ b/src/app/hub/components/editor-template/editor-template.component.html
@@ -76,12 +76,12 @@
             </div>
 
             <div class="set-12 available-layout" *ngIf="document.layouts.length != 0">
-              <h4 class="category-title">Categorías</h4>
+              <h4 class="category-title">Temas</h4>
               <div class="set-12" *ngFor="let layout of document.layouts">
                 <ul>
                   <li>
                     <button type="button" (click)="linkMe('/documentos/' + document._id + '/categoria/' + layout._id)"
-                      matTooltip="Abrir categoría" matTooltipClass="tooltip" matTooltipPosition="right"
+                      matTooltip="Abrir tema" matTooltipClass="tooltip" matTooltipPosition="right"
                       [disabled]="!layout.access">
                       <span style="font-size: 14px">{{layout.category.name}}</span>
                     </button>
