--- a/src/app/documents/single-theme/single-theme.component.html
+++ b/src/app/documents/single-theme/single-theme.component.html
@@ -180,7 +180,8 @@
                   <mat-icon>lock</mat-icon>
                   <small>Abrir privado</small>
                 </button>
-                <button type="button" mat-menu-item *ngIf="actionControlActivityList.includes(user.activityName)">
+
+                <!-- <button type="button" mat-menu-item *ngIf="actionControlActivityList.includes(user.activityName)">
                   <mat-icon>settings</mat-icon>
                   <small>Editar</small>
                 </button>
@@ -191,7 +192,8 @@
                 <button type="button" mat-menu-item *ngIf="actionControlActivityList.includes(user.activityName)">
                   <mat-icon>exit_to_app</mat-icon>
                   <small>Mover</small>
-                </button>
+                </button> -->
+
                 <button type="button" mat-menu-item (click)="killSolution(element)">
                   <mat-icon>delete</mat-icon>
                   <small>Eliminar</small>
