--- a/src/app/documents/single-category/single-category.component.html
+++ b/src/app/documents/single-category/single-category.component.html
@@ -6,10 +6,7 @@
   <div class="set-12">
     <breadcrumbs-component>
       <li>Documentos</li>
-      <li
-        *ngIf="!!document.title; else noTitle"
-        (click)="utilityService.linkMe('/documentos/' + document._id)"
-      >
+      <li *ngIf="!!document.title; else noTitle" (click)="utilityService.linkMe('/documentos/' + document._id)">
         {{ document.title }}
       </li>
       <ng-template #noTitle>
@@ -22,10 +19,8 @@
   <div class="set-12 author-hldr">
     <span class="created-by" *ngIf="category.createdBy != null">
       Autor:
-      <span class="author"
-        >{{ category.createdBy.firstname }}
-        {{ category.createdBy.lastname }}</span
-      >
+      <span class="author">{{ category.createdBy.firstname }}
+        {{ category.createdBy.lastname }}</span>
     </span>
   </div>
 
@@ -33,14 +28,8 @@
     <div class="set-3 col-lft">
       <mat-card class="set-12 doc-description">
         <div class="set-12 imghldr">
-          <mat-icon class="pano" *ngIf="category.images.length == 0"
-            >panorama</mat-icon
-          >
-          <img
-            [src]="category.images[0]"
-            alt=""
-            *ngIf="category.images.length != 0"
-          />
+          <mat-icon class="pano" *ngIf="category.images.length == 0">panorama</mat-icon>
+          <img [src]="category.images[0]" alt="" *ngIf="category.images.length != 0" />
           <div class="overlay" (click)="popImageViewer()">
             <mat-icon color="accent">photo_camera</mat-icon>
             <div class="cover"></div>
@@ -51,13 +40,9 @@
           <div class="set-12 card-title">
             <div class="set-10">{{ selectedCategory.name }}</div>
             <div class="set-2 txt-right">
-              <button
-                type="button"
-                [matMenuTriggerFor]="menu"
-                [disabled]="
+              <button type="button" [matMenuTriggerFor]="menu" [disabled]="
                   !actionControlActivityList.includes(user.activityName)
-                "
-              >
+                ">
                 <mat-icon>more_vert</mat-icon>
               </button>
 
@@ -67,11 +52,7 @@
                   <span>Editar tema</span>
                 </button>
 
-                <button
-                  type="button"
-                  mat-menu-item
-                  (click)="popDocumentComments()"
-                >
+                <button type="button" mat-menu-item (click)="popDocumentComments()">
                   <mat-icon>question_answer</mat-icon>
                   <span>Ver comentarios</span>
                 </button>
@@ -119,11 +100,7 @@
           <mat-form-field appearance="outline">
             <mat-label>Cobertura</mat-label>
             <mat-select (selectionChange)="onSelectCoverage($event)">
-              <mat-option
-                *ngFor="let option of document.coverage"
-                [value]="option._id"
-                [disabled]="!option.enabled"
-              >
+              <mat-option *ngFor="let option of document.coverage" [value]="option._id" [disabled]="!option.enabled">
                 <small>{{ option.name | titlecase }}</small>
               </mat-option>
             </mat-select>
@@ -131,54 +108,28 @@
         </div>
 
         <div class="set-8 txt-right">
-          <button
-            type="button"
-            mat-mini-fab
-            color="primary"
-            class="mini"
-            matTooltip="Agregar Comentario"
-            (click)="popAddCommentsDialog()"
-          >
+          <button type="button" mat-mini-fab color="primary" class="mini" matTooltip="Agregar Comentario"
+            (click)="popAddCommentsDialog()">
             <mat-icon>add_comment</mat-icon>
           </button>
-          <button
-            type="button"
-            mat-mini-fab
-            color="warn"
-            class="mini"
-            matTooltip="Agregar Colaborador"
-            (click)="popAddDocumentCollaborator()"
-            *ngIf="actionControlActivityList.includes(user.activityName)"
-          >
+          <button type="button" mat-mini-fab color="warn" class="mini" matTooltip="Agregar Colaborador"
+            (click)="popAddDocumentCollaborator()" *ngIf="actionControlActivityList.includes(user.activityName)">
             <mat-icon>person_add</mat-icon>
           </button>
-          <button
-            type="button"
-            mat-mini-fab
-            color="accent"
-            class="mini"
-            matTooltip="Agregar Subtema"
-            (click)="popAddDocumentCategory()"
-            *ngIf="actionControlActivityList.includes(user.activityName)"
-          >
+          <button type="button" mat-mini-fab color="accent" class="mini" matTooltip="Agregar Subtema"
+            (click)="popAddDocumentCategory()" *ngIf="actionControlActivityList.includes(user.activityName)">
             <mat-icon>create_new_folder</mat-icon>
           </button>
         </div>
       </div>
 
-      <div class="set-12 list-hldr">
+      <!-- <div class="set-12 list-hldr">
         <div class="set-6">
           <mat-card class="set-12 info-lists">
             <p class="list-title">
               <small>Soluciones</small>
               <mat-icon class="icon-insights">insights</mat-icon>
             </p>
-
-            <!--ol class="top-list">
-              <li class="top-list-item">
-                <span>Inseguridad</span>
-              </li>
-            </ol-->
           </mat-card>
         </div>
 
@@ -188,15 +139,9 @@
               <small>Problemas</small>
               <mat-icon class="icon-warnings">warning</mat-icon>
             </p>
-
-            <!-- <ol class="top-list">
-              <li class="top-list-item">
-                <span>Inseguridad</span>
-              </li>
-            </ol> -->
           </mat-card>
         </div>
-      </div>
+      </div> -->
 
       <div class="set-12 category-list">
         <mat-card class="set-12">
@@ -206,12 +151,7 @@
               [disabled]="subcategories.length == 0"> -->
             <mat-form-field appearance="outline">
               <mat-label>Buscar en subtemas...</mat-label>
-              <input
-                matInput
-                type="text"
-                (keyup)="applyFilter($event)"
-                [disabled]="subcategories.length == 0"
-              />
+              <input matInput type="text" (keyup)="applyFilter($event)" [disabled]="subcategories.length == 0" />
               <button matSuffix mat-icon-button>
                 <mat-icon>search</mat-icon>
               </button>
@@ -222,31 +162,17 @@
             <p>
               <small>Sin subtemas disponibles.</small>
             </p>
-            <button
-              type="button"
-              mat-raised-button
-              color="primary"
-              (click)="popAddDocumentCategory()"
-              *ngIf="actionControlActivityList.includes(user.activityName)"
-            >
+            <button type="button" mat-raised-button color="primary" (click)="popAddDocumentCategory()"
+              *ngIf="actionControlActivityList.includes(user.activityName)">
               <small>Agregar Subtema</small>
             </button>
           </div>
 
-          <table
-            mat-table
-            [dataSource]="dataSource"
-            class="categories-table"
-            *ngIf="subcategories.length != 0"
-          >
+          <table mat-table [dataSource]="dataSource" class="categories-table" *ngIf="subcategories.length != 0">
             <ng-container matColumnDef="name">
               <th mat-header-cell *matHeaderCellDef>Título</th>
               <td mat-cell *matCellDef="let element">
-                <button
-                  type="button"
-                  class="catbtn"
-                  [disabled]="!element.access"
-                  (click)="
+                <button type="button" class="catbtn" [disabled]="!element.access" (click)="
                     linkMe(
                       '/documentos/' +
                         document._id +
@@ -255,8 +181,7 @@
                         '/subcategoria/' +
                         element.id
                     )
-                  "
-                >
+                  ">
                   <mat-icon>question_answer</mat-icon>
                   <small>{{ element.name }}</small>
                 </button>
@@ -294,19 +219,12 @@
             <ng-container matColumnDef="actions">
               <th mat-header-cell *matHeaderCellDef></th>
               <td mat-cell *matCellDef="let element">
-                <button
-                  type="button"
-                  mat-icon-button
-                  [matMenuTriggerFor]="menu"
-                >
+                <button type="button" mat-icon-button [matMenuTriggerFor]="menu">
                   <mat-icon>more_vert</mat-icon>
                 </button>
+
                 <mat-menu #menu="matMenu">
-                  <button
-                    type="button"
-                    mat-menu-item
-                    [disabled]="!element.access"
-                    (click)="
+                  <button type="button" mat-menu-item [disabled]="!element.access" (click)="
                       linkMe(
                         '/documentos-publicos/' +
                           document._id +
@@ -315,16 +233,11 @@
                           '/subcategoria/' +
                           element._id
                       )
-                    "
-                  >
+                    ">
                     <mat-icon>groups</mat-icon>
                     <small>Abrir público</small>
                   </button>
-                  <button
-                    type="button"
-                    mat-menu-item
-                    [disabled]="!element.access"
-                    (click)="
+                  <button type="button" mat-menu-item [disabled]="!element.access" (click)="
                       linkMe(
                         '/documentos/' +
                           document._id +
@@ -333,53 +246,30 @@
                           '/subcategoria/' +
                           element._id
                       )
-                    "
-                  >
+                    ">
                     <mat-icon>lock</mat-icon>
                     <small>Abrir privado</small>
                   </button>
+                  
                   <!-- <button type="button" mat-menu-item *ngIf="!element.access" (click)="requestPermission(element)">
                     <mat-icon>vpn_key</mat-icon>
                     <small>Solicitar permiso</small>
-                  </button> -->
-                  <button
-                    type="button"
-                    mat-menu-item
-                    *ngIf="
-                      actionControlActivityList.includes(user.activityName)
-                    "
-                  >
+                  </button>
+                  <button type="button" mat-menu-item *ngIf="actionControlActivityList.includes(user.activityName)">
                     <mat-icon>settings</mat-icon>
                     <small>Editar</small>
                   </button>
-                  <button
-                    type="button"
-                    mat-menu-item
-                    *ngIf="
-                      actionControlActivityList.includes(user.activityName)
-                    "
-                  >
+                  <button type="button" mat-menu-item *ngIf="actionControlActivityList.includes(user.activityName)">
                     <mat-icon>drag_handle</mat-icon>
                     <small>Duplicar</small>
                   </button>
-                  <button
-                    type="button"
-                    mat-menu-item
-                    *ngIf="
-                      actionControlActivityList.includes(user.activityName)
-                    "
-                  >
+                  <button type="button" mat-menu-item *ngIf="actionControlActivityList.includes(user.activityName)">
                     <mat-icon>exit_to_app</mat-icon>
                     <small>Mover</small>
-                  </button>
-                  <button
-                    type="button"
-                    mat-menu-item
-                    (click)="killLayout(element)"
-                    *ngIf="
-                      actionControlActivityList.includes(user.activityName)
-                    "
-                  >
+                  </button> -->
+
+                  <button type="button" mat-menu-item (click)="killLayout(element)"
+                    *ngIf="actionControlActivityList.includes(user.activityName)">
                     <mat-icon>delete</mat-icon>
                     <small>Eliminar</small>
                   </button>
