--- a/src/app/documents/single-document/single-document.component.html
+++ b/src/app/documents/single-document/single-document.component.html
@@ -54,13 +54,10 @@
                   <span>Usar como portada</span>
                 </button>
 
-                <button type="button" mat-menu-item (click)="popAddCoverTextDialog()">
+                <!-- <button type="button" mat-menu-item (click)="popAddCoverTextDialog()">
                   <mat-icon>edit_note</mat-icon>
-                  <span>{{
-                    document.coverDescription ? "Editar" : "Agregar"
-                    }}
-                    texto portada</span>
-                </button>
+                  <span>{{ document.coverDescription ? "Editar" : "Agregar" }} texto portada</span>
+                </button> -->
 
                 <button type="button" mat-menu-item (click)="setDocumentAsPublicPrivate()">
                   <mat-icon>lock</mat-icon>
@@ -134,19 +131,13 @@
         </div>
       </div>
 
-      <div class="set-12 list-hldr">
+      <!-- <div class="set-12 list-hldr">
         <div class="set-6">
           <mat-card class="set-12 info-lists">
             <p class="list-title">
               <small>Soluciones</small>
               <mat-icon class="icon-insights">insights</mat-icon>
             </p>
-
-            <!--ol class="top-list">
-              <li class="top-list-item">
-                <span>Inseguridad</span>
-              </li>
-            </ol-->
           </mat-card>
         </div>
 
@@ -156,15 +147,9 @@
               <small>Problemas</small>
               <mat-icon class="icon-warnings">warning</mat-icon>
             </p>
-
-            <!-- <ol class="top-list">
-              <li class="top-list-item">
-                <span>Inseguridad</span>
-              </li>
-            </ol> -->
           </mat-card>
         </div>
-      </div>
+      </div> -->
 
       <div class="set-12 category-list">
         <mat-card class="set-12">
@@ -269,28 +254,24 @@
                     <mat-icon>lock</mat-icon>
                     <small>Abrir privado</small>
                   </button>
-                  <button type="button" mat-menu-item *ngIf="!element.access" (click)="requestPermission(element)">
+
+                  <!-- <button type="button" mat-menu-item *ngIf="!element.access" (click)="requestPermission(element)">
                     <mat-icon>vpn_key</mat-icon>
                     <small>Solicitar permiso</small>
                   </button>
-                  <button type="button" mat-menu-item *ngIf="
-                      actionControlActivityList.includes(user.activityName)
-                    ">
+                  <button type="button" mat-menu-item *ngIf="actionControlActivityList.includes(user.activityName)">
                     <mat-icon>settings</mat-icon>
                     <small>Editar</small>
                   </button>
-                  <button type="button" mat-menu-item *ngIf="
-                      actionControlActivityList.includes(user.activityName)
-                    ">
+                  <button type="button" mat-menu-item *ngIf="actionControlActivityList.includes(user.activityName)">
                     <mat-icon>drag_handle</mat-icon>
                     <small>Duplicar</small>
                   </button>
-                  <button type="button" mat-menu-item *ngIf="
-                      actionControlActivityList.includes(user.activityName)
-                    ">
+                  <button type="button" mat-menu-item *ngIf="actionControlActivityList.includes(user.activityName)">
                     <mat-icon>exit_to_app</mat-icon>
                     <small>Mover</small>
-                  </button>
+                  </button> -->
+
                   <button type="button" mat-menu-item (click)="killLayout(element)"
                     *ngIf="actionControlActivityList.includes(user.activityName)">
                     <mat-icon>delete</mat-icon>
